// Protocol buffer to stream text data.
syntax = "proto3";

package multiscope.plot;

option go_package = "multiscope/protos/plot_go_proto";

message ScalarsPlot {
  Plot plot = 1;
}

message Plot {
  repeated Plotter plotters = 2;

  Axis x = 3;
  Axis y = 4;
}

message Plotter {
  string legend = 1;

  oneof drawer {
    LineDrawer lineDrawer = 10;
    HistogramDrawer histogramDrawer = 11;
  }
}

message Axis {
  AxisProperties properties = 10;
}

message AxisProperties {
  string label = 1;
  double minValue = 2;
  double maxValue = 3;
}

// LineDraw draws points as a sequence of lines and dots.
message LineDrawer {
  message Point {
    double x = 1;
    double y = 2;
  }
  repeated Point points = 2;
}

// HistogramDrawer draws bins on a plot.
message HistogramDrawer {
  message Bin {
    double min = 1;
    double max = 2;
    double weight = 3;
  }
  repeated Bin bins = 2;
}
